force-app/main/default/objects/CWS_Disti_Factor__c/CWS_Disti_Factor__c.object-meta.xml
<CustomObject>
    <description>Disti Factor will be used to calculate the Distributor Net Price by using the formula Customer Net Price * Disti Factor.</description>
    <label>Disti Factor</label>
    <nameField>
        <displayFormat>DF-{0000}</displayFormat>
        <label>Disti Factor Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disti Factors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>