force-app/main/default/objects/CWS_Disti_Factor__c/fields/CWS_Currency__c.field-meta.xml
<CustomField>
    <fullName>CWS_Currency__c</fullName>
    <description>Formula field used to display Currency ISO Code on Page Layout.</description>
    <formula>TEXT(CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CurrencyIsoCode</inlineHelpText>
    <label>Currency</label>
    <type>Text</type>
</CustomField>