force-app/main/default/objects/CWS_Disti_Factor__c/fields/CWS_Disti_Factor__c.field-meta.xml
<CustomField>
    <fullName>CWS_Disti_Factor__c</fullName>
    <description>Disti Factor</description>
    <inlineHelpText>Disti Factor</inlineHelpText>
    <label>Disti Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>