force-app/main/default/objects/CWS_Disti_Factor__c/fields/CWS_Distributor__c.field-meta.xml
<CustomField>
    <fullName>CWS_Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Distributor Account. Quote&apos;s Distributor account will be used to compare against this field value for applying Disti Factor.</description>
    <inlineHelpText>Lookup to Distributor Account. Quote&apos;s Distributor account will be used to compare against this field value for applying Disti Factor.</inlineHelpText>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Disti Factors</relationshipLabel>
    <relationshipName>Disti_Factors</relationshipName>
    <type>Lookup</type>
</CustomField>