force-app/main/default/objects/CWS_Disti_Factor__c/fields/CWS_Fulfillment_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Fulfillment_Type__c</fullName>
    <description>Product&apos;s Fulfillment Type.</description>
    <inlineHelpText>Product&apos;s Fulfillment Type.</inlineHelpText>
    <label>Fulfillment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Fulfillment_Type</valueSetName>
    </valueSet>
</CustomField>