force-app/main/default/objects/CWS_Disti_Factor__c/fields/CWS_Legacy_Category__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_Category__c</fullName>
    <label>Legacy Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Legacy_Category</valueSetName>
    </valueSet>
</CustomField>