force-app/main/default/objects/CWS_Disti_Factor__c/fields/CWS_Message__c.field-meta.xml
<CustomField>
    <fullName>CWS_Message__c</fullName>
    <description>Validation Error Message to be displayed when Disti Factor is Zero</description>
    <inlineHelpText>Validation Error Message to be displayed when Disti Factor is Zero</inlineHelpText>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>