force-app/main/default/objects/CWS_Disti_Factor__c/fields/CWS_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_EF_Attribute</valueSetName>
    </valueSet>
</CustomField>