force-app/main/default/objects/CWS_Disti_Factor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CWS_Fulfillment_Type__c</columns>
    <columns>CWS_Legacy_Category__c</columns>
    <columns>CWS_Product_Type__c</columns>
    <columns>CWS_Disti_Factor__c</columns>
    <columns>CWS_Distributor__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>OBJECT_ID</columns>
    <columns>CWS_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CWS_Product_Type__c</field>
        <operation>equals</operation>
        <value>Service</value>
    </filters>
    <filters>
        <field>CWS_Legacy_Category__c</field>
        <operation>equals</operation>
        <value>CORE</value>
    </filters>
    <filters>
        <field>CWS_Fulfillment_Type__c</field>
        <operation>equals</operation>
        <value>Deal Reg</value>
    </filters>
    <label>All</label>
</ListView>