force-app/main/default/objects/CWS_Disti_Factor__c/listViews/Ingram.listView-meta.xml
<ListView>
    <fullName>Ingram</fullName>
    <columns>NAME</columns>
    <columns>CWS_Legacy_Category__c</columns>
    <columns>CWS_Disti_Factor__c</columns>
    <columns>CWS_Fulfillment_Type__c</columns>
    <columns>CWS_Distributor__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CWS_Distributor__c</field>
        <operation>equals</operation>
        <value>Ingram</value>
    </filters>
    <label>Ingram</label>
</ListView>